vest-dsl/test/bad/const_int_value_range3.vest
const FOO: u32 = 4294967296
